# sequentium

./: .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  README.md  SEQUENCES_LIST.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: docs.yaml  linting-and-formatting.yml  linting.yml  release.yml  tests-suite.yml  version.yml
docs/: CNAME  Makefile  conf.py
docs/pages/: command‐line-interface.md  contributing.md  quickstart.md
docs/source/: conf.py  how-to-contribute.md  index.rst  usage.md
examples/: solving_project_euler_problems.ipynb
sequence/: SEQUENCES_LIST.md  __init__.py  __main__.py  __version__.py
sequence/cli/: cli.py  parser.py
sequence/cli/commands/: list.py  sequence.py
sequence/commands/: cli.py
sequence/core/: core.py  core_mixin.py  errors.py  finite_type.py  infinite_type.py  mixin.py  operations.py  validations.py
sequence/core/utils/: errors.py  exceptions.py  excpetions.py  functions.py  validation.py  validations.py
sequence/file_manager/: generate_list_of_sequences.py
sequence/sequences/: generalised_sequences.py
sequence/sequences/integer/: explicit.py  explicit_generalised.py  explicit_generalised_sequences.py  finite.py  generalised_integer_sequences.py  periodic.py  periodic_generalised.py  property_defined.py  property_defined_generalised.py  property_defined_generalised_sequences.py  recursive.py  recursive_generalised.py  recursive_generalised_sequences.py
sequencepy/: __init__.py
sequencepy/base/: sequence.py  validations.py
sequencepy/sequence/: sequence.py
sequencepy/sequences/: generalised_sequences.py
sequentium/: SEQUENCES_LIST.md  __init__.py  __main__.py
sequentium/cli/: cli.py  parser.py
sequentium/core/: core.py  finite_type.py  infinite_type.py
tests/: sequence_test_suite.py
tests/tests_core/: test_operations.py
tests/tests_integer_sequences/: sequence_test_suite.py  test_explicit.py  test_finite.py  test_periodic.py  test_property_defined.py  test_recursive.py
tests/tests_meta/: test_cases.py  test_scripts.py  tests_scripts.py  utils.py
(+14 files in other folders)
